启动脚本修改